// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`svgo async #loadConfig [async] should load config using filePath 1`] = `
Object {
  "dimensions": true,
  "expandProps": "end",
  "exportType": "default",
  "icon": true,
  "index": false,
  "memo": false,
  "namedExport": "ReactComponent",
  "native": false,
  "noSemi": true,
  "prettier": true,
  "prettierConfig": undefined,
  "ref": false,
  "replaceAttrValues": Array [
    Array [
      "#063855",
      "currentColor",
    ],
  ],
  "runtimeConfig": true,
  "svgProps": undefined,
  "svgo": true,
  "svgoConfig": undefined,
  "template": undefined,
  "titleProp": false,
  "typescript": false,
}
`;

exports[`svgo async #loadConfig [async] should not load config with "runtimeConfig: false 1`] = `
Object {
  "dimensions": true,
  "expandProps": "end",
  "exportType": "default",
  "icon": true,
  "index": false,
  "memo": false,
  "namedExport": "ReactComponent",
  "native": false,
  "noSemi": true,
  "prettier": true,
  "prettierConfig": undefined,
  "ref": false,
  "replaceAttrValues": Array [
    Array [
      "#063855",
      "currentColor",
    ],
  ],
  "runtimeConfig": true,
  "svgProps": undefined,
  "svgo": true,
  "svgoConfig": undefined,
  "template": undefined,
  "titleProp": false,
  "typescript": false,
  "useRuntimeConfig": false,
}
`;

exports[`svgo async #loadConfig [async] should use default config without state.filePath 1`] = `
Object {
  "dimensions": false,
  "expandProps": "end",
  "exportType": "default",
  "icon": false,
  "index": false,
  "memo": false,
  "namedExport": "ReactComponent",
  "native": false,
  "prettier": true,
  "prettierConfig": undefined,
  "ref": false,
  "replaceAttrValues": undefined,
  "runtimeConfig": true,
  "svgProps": undefined,
  "svgo": true,
  "svgoConfig": undefined,
  "template": undefined,
  "titleProp": false,
  "typescript": false,
}
`;

exports[`svgo async #loadConfig [async] should work with custom config path 1`] = `
Object {
  "dimensions": true,
  "expandProps": "end",
  "exportType": "default",
  "icon": true,
  "index": false,
  "memo": false,
  "namedExport": "ReactComponent",
  "native": false,
  "noSemi": true,
  "prettier": true,
  "prettierConfig": undefined,
  "ref": false,
  "replaceAttrValues": Array [
    Array [
      "#063855",
      "currentColor",
    ],
  ],
  "runtimeConfig": true,
  "svgProps": undefined,
  "svgo": true,
  "svgoConfig": undefined,
  "template": undefined,
  "titleProp": false,
  "typescript": false,
}
`;

exports[`svgo sync #loadConfig [sync] should load config using filePath 1`] = `
Object {
  "dimensions": true,
  "expandProps": "end",
  "exportType": "default",
  "icon": true,
  "index": false,
  "memo": false,
  "namedExport": "ReactComponent",
  "native": false,
  "noSemi": true,
  "prettier": true,
  "prettierConfig": undefined,
  "ref": false,
  "replaceAttrValues": Array [
    Array [
      "#063855",
      "currentColor",
    ],
  ],
  "runtimeConfig": true,
  "svgProps": undefined,
  "svgo": true,
  "svgoConfig": undefined,
  "template": undefined,
  "titleProp": false,
  "typescript": false,
}
`;

exports[`svgo sync #loadConfig [sync] should not load config with "runtimeConfig: false 1`] = `
Object {
  "dimensions": true,
  "expandProps": "end",
  "exportType": "default",
  "icon": true,
  "index": false,
  "memo": false,
  "namedExport": "ReactComponent",
  "native": false,
  "noSemi": true,
  "prettier": true,
  "prettierConfig": undefined,
  "ref": false,
  "replaceAttrValues": Array [
    Array [
      "#063855",
      "currentColor",
    ],
  ],
  "runtimeConfig": true,
  "svgProps": undefined,
  "svgo": true,
  "svgoConfig": undefined,
  "template": undefined,
  "titleProp": false,
  "typescript": false,
  "useRuntimeConfig": false,
}
`;

exports[`svgo sync #loadConfig [sync] should use default config without state.filePath 1`] = `
Object {
  "dimensions": false,
  "expandProps": "end",
  "exportType": "default",
  "icon": false,
  "index": false,
  "memo": false,
  "namedExport": "ReactComponent",
  "native": false,
  "prettier": true,
  "prettierConfig": undefined,
  "ref": false,
  "replaceAttrValues": undefined,
  "runtimeConfig": true,
  "svgProps": undefined,
  "svgo": true,
  "svgoConfig": undefined,
  "template": undefined,
  "titleProp": false,
  "typescript": false,
}
`;

exports[`svgo sync #loadConfig [sync] should work with custom config path 1`] = `
Object {
  "dimensions": true,
  "expandProps": "end",
  "exportType": "default",
  "icon": true,
  "index": false,
  "memo": false,
  "namedExport": "ReactComponent",
  "native": false,
  "noSemi": true,
  "prettier": true,
  "prettierConfig": undefined,
  "ref": false,
  "replaceAttrValues": Array [
    Array [
      "#063855",
      "currentColor",
    ],
  ],
  "runtimeConfig": true,
  "svgProps": undefined,
  "svgo": true,
  "svgoConfig": undefined,
  "template": undefined,
  "titleProp": false,
  "typescript": false,
}
`;
